@@ -1,3 +1,4 @@
+* Cleanup ifdef's for MySQL 4.x and earlier
 * Remove MySQL Embedded support (libmysqld)
 * Replace my_bool with bool
 * Remove MySQL Fabric support
